@@ -1,3 +1,4 @@
+* Remove default planned date on supplier shipment
 * Add shipped state to customer shipment
 
 Version 7.2.0 - 2024-04-29
